refactor: style fixes and guidelines